Fix paragraph width on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -207,7 +207,7 @@ margin: 0;
 
     }
 
-    p {
+    p.large-text {
         column-count: 1;
     }
 
